# fern

./: CMakeLists.txt  README.md  main.cpp
benchmarking/: CMakeLists.txt  attention.cpp  fern_benchmarks.cpp  matrix_multiply.cpp  plot-script.py  pytorch_attention.py  tensor.h
code_sample/: black_scholes.ir  conv_max.ir  conv_tanh.ir  db-processing.ir  db_processing.ir  granularity.ir  halide_blur.ir  halide_unsharp.ir  haversine.ir  reuse_haversine.ir  stacked_conv_max.ir  worst_case.ir
code_sample/break/: test1.cpp  test2.cpp
code_sample/code/: black_scholes.cpp  black_scholes_impl.cpp  conv_max.cpp  conv_tanh.cpp  db_processing.cpp  granularity.cpp  halide_blur.cpp  halide_blur_code.cpp  halide_unsharp.cpp  haversine.cpp  reuse_haversine.cpp  stacked_conv_max.cpp  worst_case.cpp
code_sample/code/include/: array-mock.h  black_scholes.h
code_sample/demo/: demo-1.cpp
code_sample/node_merging/: test1.cpp  test2.cpp
code_sample/py/: simple-array.py  worst_case.py
code_sample/subpipeline/: test1.cpp  test2.cpp
docs/: black_scholes_example.md  running.md
include/: fern_error.h  global_config.h  type.h
include/codegen/: codegen.h  codegen_ir.h  codegen_printer.h  codegen_visitor.h
include/dependency_lang/: data-structure-interface.h  dep_lang.h  dep_lang_nodes.h  dep_lang_nodes_abstract.h  dep_lang_printer.h  dep_lang_rewriter.h  dep_lang_visitor.h  dependency_solver.h
include/dependency_resolver/: dependency_graph.h  pipeline.h  pipeline_abstract_node.h  pipeline_nodes.h
include/examples/: arm-apple-interface.h  common-ds.h  db-interface.h  demo.h  geospatial.h  halide-examples.h  image-convs.h  pointwise-array.h  py-pointwise-array.h
include/utils/: instrusive_ptr.h  name.h  printer.h  scopedset.h
polypass/: README.md  halide_funcs.py
polypass/normal_c/: before-polly.bc  before-polly.ll  c_analyzer.py  example___%for.cond---%for.end26.jscop  example___%for.cond---%for.end35.jscop  is___%for.cond---%for.end10.jscop  poly_analyzer.py  test.c  test.ll  test.preopt.ll  test.s
preprocessor/: README.md  annot_parser.py  auto-gen-annot.py  expr_parser.py  preprocessor.py  signature_parse.py
preprocessor/examples/: array-interface.h
preprocessor/examples/cpp_files/: array_test.h  conv_test.h
preprocessor/examples/headers/: array-interface.h  image-convs.h
python/: example.py  generate_pipeline.py  generate_torch_compile_pipeline.py  pipeline.cpp  pipeline.ir  pipeline1.cpp  pipeline1.ir  pipeline2.cpp  pipeline2.ir  pipeline_construction.py  pygen.cpp  pygen.ir  pygen.py  pygen_example.py  pytorch_ex.py  pytorch_pipeline.cpp  pytorch_pipeline.ir  pytorch_pipeline.py  pytorch_pipeline_fused.cpp  pytorch_pipeline_fused.py  run_attention.py  test.py  torch_compile_attention_fused.py
python/torch_compile/: generate_pipeline.py  test.py
src/: CMakeLists.txt  type.cpp
src/codegen/: codegen.cpp  codegen_ir.cpp  codegen_visitor.cpp  codgen_printer.cpp
src/dependency_lang/: constraint_language_nodes.cpp  constraint_language_rewriter.cpp  constraint_language_visitor.cpp  data-structure-interface.cpp  dep_lang.cpp  dep_lang_nodes_abstract.cpp  dep_lang_printer.cpp  dependency_solver.cpp
src/dependency_resolver/: dependency_graph.cpp  pipeline.cpp  pipeline_nodes.cpp
test/: CMakeLists.txt  test-break.cpp  test-demo.cpp  test-node-merging.cpp  test-pipeline.cpp  test-py-pipeline.cpp  test-raw-datatypes.cpp  test-subpipeline.cpp
